--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
           rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
+        <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
+         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" /> 
         <link rel="shortcut icon" href="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png" type="image/x-icon">
         <title>Google Keep</title>
         <link rel="stylesheet" href="style.css" />
@@ -244,6 +246,35 @@
             </div>
           </div>
         </main>
+
+        <script type="module">
+          // Import the functions you need from the SDKs you need
+          import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+          // TODO: Add SDKs for Firebase products that you want to use
+          // https://firebase.google.com/docs/web/setup#available-libraries
+          import { getAuth } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+          import { getFirestore } from  "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+          // Your web app's Firebase configuration
+          const firebaseConfig = {
+            apiKey: "AIzaSyBFep5gmWgDYx4H0XQRQ7ARDUjJDPaVOtk",
+            authDomain: "keep-616f4.firebaseapp.com",
+            projectId: "keep-616f4",
+            storageBucket: "keep-616f4.firebasestorage.app",
+            messagingSenderId: "443325408515",
+            appId: "1:443325408515:web:74022b72371c22fcf47536"
+          };
+        
+          // Initialize Firebase
+          const app = initializeApp(firebaseConfig);
+
+           // Initialize Firebase Authentication and get a reference to the service
+           const auth = getAuth(app);
+            // Initialize Firebase firestore and get a reference to the service
+           const db = getFirestore(app);
+           console.log(app);
+           console.log(auth);
+           console.log(db);
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js" referrerpolicy="no-referrer"></script>
         <!--<script src="app.js"></script>-->
         <script src="app.js"></script>
