--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
           rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
+        <link
+        href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+        rel="stylesheet">
         <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
-         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" /> 
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
         <link rel="shortcut icon" href="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png" type="image/x-icon">
+      
         <title>Google Keep</title>
         <link rel="stylesheet" href="style.css" />
       </head>
       <body>
+
+        <div id="firebaseui-auth-container"></div>
+        <div id="app">  
         <nav>
           <div class="logo-area">
+
             <div class="tooltip">
               <span class="material-symbols-outlined hover">menu</span>
               <span class="tooltip-text">Main Menu</span>
             </div>
+
             <img
               class="gb_Hc gb_Hd"
               src="https://www.gstatic.com/images/branding/product/1x/keep_2020q4_48dp.png"
@@ -36,6 +45,7 @@
             />
             <span class="logo-text">Keep</span>
           </div>
+
           <div class="search-area">
             <div class="tooltip">
               <span class="material-symbols-outlined hover">search</span>
@@ -43,6 +53,7 @@
             </div>
             <input type="text" placeholder="Search" />
           </div>
+
           <div class="settings-area">
             <div class="tooltip">
               <span class="material-symbols-outlined hover">refresh</span>
@@ -57,14 +68,16 @@
               <span class="tooltip-text">Settings</span>
             </div>
           </div>
+
           <div class="profile-actions-area">
             <div class="tooltip">
               <span class="material-symbols-outlined hover">apps</span>
               <span class="tooltip-text">Apps</span>
             </div>
-            <div class="tooltip">
+            <div class="tooltip logout">
               <span class="material-symbols-outlined hover">account_circle</span>
-              <span class="tooltip-text">Accounts</span>
+              <span class="tooltip-text">logout</span>
+              <span class="auth-user"></span>
             </div>
           </div>
         </nav>
@@ -230,7 +243,7 @@
                         <span class="material-symbols-outlined hover small-icon"
                           >undo</span
                         >
-                        <span class="tooltip-text">Undo</span>
+                      <span class="tooltip-text">Undo</span>
                       </div>
                       <div class="tooltip">
                         <span class="material-symbols-outlined hover small-icon"
@@ -247,37 +260,14 @@
           </div>
         </main>
 
-        <script type="module">
-          // Import the functions you need from the SDKs you need
-          import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-          // TODO: Add SDKs for Firebase products that you want to use
-          // https://firebase.google.com/docs/web/setup#available-libraries
-          import { getAuth } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
-          import { getFirestore } from  "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
-          // Your web app's Firebase configuration
-          const firebaseConfig = {
-            apiKey: "AIzaSyBFep5gmWgDYx4H0XQRQ7ARDUjJDPaVOtk",
-            authDomain: "keep-616f4.firebaseapp.com",
-            projectId: "keep-616f4",
-            storageBucket: "keep-616f4.firebasestorage.app",
-            messagingSenderId: "443325408515",
-            appId: "1:443325408515:web:74022b72371c22fcf47536"
-          };
-        
-          // Initialize Firebase
-          const app = initializeApp(firebaseConfig);
+        </div>
 
-           // Initialize Firebase Authentication and get a reference to the service
-           const auth = getAuth(app);
-            // Initialize Firebase firestore and get a reference to the service
-           const db = getFirestore(app);
-           console.log(app);
-           console.log(auth);
-           console.log(db);
-        </script>
+     <!-- The core Firebase JS SDK is always required and must be listed first -->  
+      <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-app-compat.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-auth-compat.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore-compat.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js" referrerpolicy="no-referrer"></script>
-        <!--<script src="app.js"></script>-->
-        <script src="app.js"></script>
+         <script src="app.js"></script>
       </body>
     </html>
 
